# Slicer_CIVM_GalleryControl

./: .gitignore  .svn.externals  CMakeLists.txt  README  install.pl  set_svn_externals.bash
CIVM_GalleryControl/: CMakeLists.txt  qSlicerCIVM_GalleryControlModule.cxx  qSlicerCIVM_GalleryControlModule.h  qSlicerCIVM_GalleryControlModuleWidget.cxx  qSlicerCIVM_GalleryControlModuleWidget.h
CIVM_GalleryControl/Logic/: vtkSlicerCIVM_GalleryControlLogic.cxx  vtkSlicerCIVM_GalleryControlLogic.h
CIVM_GalleryControl/MRML/: CMakeLists.txt  vtkMRMLTagCategoryStorageNode.cxx  vtkMRMLTagCategoryStorageNode.h
CIVM_GalleryControl/Resources/: qSlicerCIVM_GalleryControlModule.qrc
CIVM_GalleryControl/Resources/UI/: qSlicerCIVM_GalleryControlFooBarWidget.ui  qSlicerCIVM_GalleryControlModuleWidget.ui  qSlicerCIVM_GalleryControlPanelBlankWidget.ui  qSlicerCIVM_GalleryControlPanelDataSelectorWidget.ui  qSlicerCIVM_GalleryControlPanelPGRWidget.ui
CIVM_GalleryControl/Testing/Cxx/: CMakeLists.txt
CIVM_GalleryControl/Widgets/: CMakeLists.txt  qSlicerCIVM_GalleryControlFooBarWidget.cxx  qSlicerCIVM_GalleryControlFooBarWidget.h  qSlicerCIVM_GalleryControlPanelBlankWidget.cxx  qSlicerCIVM_GalleryControlPanelBlankWidget.h  qSlicerCIVM_GalleryControlPanelDataSelectorWidget.cxx  qSlicerCIVM_GalleryControlPanelDataSelectorWidget.h  qSlicerCIVM_GalleryControlPanelPGRWidget.cxx  qSlicerCIVM_GalleryControlPanelPGRWidget.h
MRML/: CMakeLists.txt  vtkMRMLNDLibraryBuilder.cxx  vtkMRMLNDLibraryBuilder.h  vtkMRMLNDLibraryNode.cxx  vtkMRMLNDLibraryNode.h  vtkMRMLTagCategoryStorageNode.cxx  vtkMRMLTagCategoryStorageNode.h
Testing/Cxx/: CIVM_GalleryControl_NDCreateByPaths.cxx  CMakeLists.txt
install/: inst-order.txt  inst-svn_externals.pl  order.pm  subroutines.pm
